/*
 * Copyright 2024 The Yorkie Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package yorkie.v1;

import "yorkie/v1/yorkie.proto";

option go_package = "github.com/yorkie-team/yorkie/api/yorkie/v1;v1";

option java_multiple_files = true;
option java_package = "dev.yorkie.api.v1";

service SystemService {
  rpc ActivateClient (ActivateClientRequest) returns (ActivateClientResponse) {}
  rpc DeactivateClient (DeactivateClientRequest) returns (DeactivateClientResponse) {}

  rpc AttachDocument (AttachDocumentRequest) returns (AttachDocumentResponse) {}
  rpc DetachDocument (DetachDocumentRequest) returns (DetachDocumentResponse) {}
  rpc RemoveDocument (RemoveDocumentRequest) returns (RemoveDocumentResponse) {}
  rpc PushPullChanges (PushPullChangesRequest) returns (PushPullChangesResponse) {}

  rpc WatchDocument (WatchDocumentRequest) returns (stream WatchDocumentResponse) {}

  rpc Broadcast (BroadcastRequest) returns (BroadcastResponse) {}
}
